# qt-zmq

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: FindFilament.cmake  FindOpenMP.cmake
src/: client.cpp  drape_thread.cpp  drape_thread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
